force-app/main/default/objects/Opportunity__c/fields/Account_All_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_All_Email__c</fullName>
    <formula>Account_Name__r.Email_1__c &amp; &quot;;&quot; &amp;
Account_Name__r.Email_2__c &amp; &quot;;&quot; &amp;
Account_Name__r.Email_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account All Email</label>
    <type>Text</type>
</CustomField>