force-app/main/default/objects/Opportunity__c/fields/Agreement_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Duration__c</fullName>
    <label>Agreement Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>