force-app/main/default/objects/Opportunity__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>