force-app/main/default/objects/Opportunity__c/fields/Amount_Collected_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected_for_Commission__c</fullName>
    <label>Amount Collected for Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>