force-app/main/default/objects/Opportunity__c/fields/Amount_Expected_to_collect__c.field-meta.xml
<CustomField>
    <fullName>Amount_Expected_to_collect__c</fullName>
    <formula>Total_Amount_for_Design__c  +  Total_Commission_for_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Expected to collect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>