force-app/main/default/objects/Opportunity__c/fields/Amount_Expected_to_Collect_for_Commisson__c.field-meta.xml
<CustomField>
    <fullName>Amount_Expected_to_Collect_for_Commisson__c</fullName>
    <formula>Total_Amount_for_Construction__c  +  Total_amount_for_for_CSC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Expected to Collect for Commisson</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>