force-app/main/default/objects/Opportunity__c/fields/Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending__c</fullName>
    <formula>Amount_Expected_to_collect__c  -  Amount_Collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>