force-app/main/default/objects/Opportunity__c/fields/Amount_Pending_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending_for_Commission__c</fullName>
    <formula>Amount_Expected_to_Collect_for_Commisson__c  -   Amount_Collected_for_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Pending for Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>