force-app/main/default/objects/Opportunity__c/fields/Amount_Received_from_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_from_Landlord__c</fullName>
    <label>Amount Received from Landlord</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>