force-app/main/default/objects/Opportunity__c/fields/Any_Other_Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Specific_Requirements__c</fullName>
    <label>Any Other Specific Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>