force-app/main/default/objects/Opportunity__c/fields/Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>Approval_Authority__c</fullName>
    <label>Approval Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>