force-app/main/default/objects/Opportunity__c/fields/Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Authority_Name__c</fullName>
    <label>Authority Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>