force-app/main/default/objects/Opportunity__c/fields/Budget_Range1__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range1__c</fullName>
    <label>Budget_Range</label>
    <length>18</length>
    <type>Text</type>
</CustomField>