force-app/main/default/objects/Opportunity__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget_Range</valueSetName>
    </valueSet>
</CustomField>