force-app/main/default/objects/Opportunity__c/fields/Built_up_area__c.field-meta.xml
<CustomField>
    <fullName>Built_up_area__c</fullName>
    <label>Built up area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>