force-app/main/default/objects/Opportunity__c/fields/Built_up_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Built_up_Area_Sqft__c</fullName>
    <label>Built-up Area (Sqft)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>