force-app/main/default/objects/Opportunity__c/fields/Built_Up_Area_UoM__c.field-meta.xml
<CustomField>
    <fullName>Built_Up_Area_UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sq Ft</fullName>
            </value>
            <value>
                <fullName>Sq Mtr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>