force-app/main/default/objects/Opportunity__c/fields/Canopy_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Canopy_Requirement__c</fullName>
    <label>Canopy Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>