force-app/main/default/objects/Opportunity__c/fields/Canteen__c.field-meta.xml
<CustomField>
    <fullName>Canteen__c</fullName>
    <label>Canteen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>