force-app/main/default/objects/Opportunity__c/fields/Carpet_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_Sqft__c</fullName>
    <label>Carpet Area (Sqft)</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>