force-app/main/default/objects/Opportunity__c/fields/Ceiling_Side_Height__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Side_Height__c</fullName>
    <label>Ceiling Side Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>