force-app/main/default/objects/Opportunity__c/fields/Charge_per_sq_ft_for_Construction_Scope__c.field-meta.xml
<CustomField>
    <fullName>Charge_per_sq_ft_for_Construction_Scope__c</fullName>
    <label>Charge per sq ft for Construction Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>