force-app/main/default/objects/Opportunity__c/fields/Charge_per_sq_ft_for_Design_Scope_Commis__c.field-meta.xml
<CustomField>
    <fullName>Charge_per_sq_ft_for_Design_Scope_Commis__c</fullName>
    <label>Charge per sq ft for Design Scope Commis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>