force-app/main/default/objects/Opportunity__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <type>TextArea</type>
</CustomField>