force-app/main/default/objects/Opportunity__c/fields/Design_Budget__c.field-meta.xml
<CustomField>
    <fullName>Design_Budget__c</fullName>
    <label>Design Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>