force-app/main/default/objects/Opportunity__c/fields/Design_Name__c.field-meta.xml
<CustomField>
    <fullName>Design_Name__c</fullName>
    <label>Design Name</label>
    <type>TextArea</type>
</CustomField>