force-app/main/default/objects/Opportunity__c/fields/DG_Area__c.field-meta.xml
<CustomField>
    <fullName>DG_Area__c</fullName>
    <label>DG Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>