force-app/main/default/objects/Opportunity__c/fields/Dock_Levelers__c.field-meta.xml
<CustomField>
    <fullName>Dock_Levelers__c</fullName>
    <label>Dock Levelers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>