force-app/main/default/objects/Opportunity__c/fields/EB_Room__c.field-meta.xml
<CustomField>
    <fullName>EB_Room__c</fullName>
    <label>EB Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>