force-app/main/default/objects/Opportunity__c/fields/Expected_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Approval_Date__c</fullName>
    <label>Expected Approval Date</label>
    <type>Date</type>
</CustomField>