force-app/main/default/objects/Opportunity__c/fields/Expected_Commission_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Commission_from_Buyer__c</fullName>
    <label>Expected Commission from Buyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>