force-app/main/default/objects/Opportunity__c/fields/Expected_Commission_from_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Expected_Commission_from_Tenant__c</fullName>
    <label>Expected Commission from Tenant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>