force-app/main/default/objects/Opportunity__c/fields/Fire_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Fire_Emergency__c</fullName>
    <label>Fire Emergency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>