force-app/main/default/objects/Opportunity__c/fields/Fire_NoC__c.field-meta.xml
<CustomField>
    <fullName>Fire_NoC__c</fullName>
    <label>Fire NoC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>