force-app/main/default/objects/Opportunity__c/fields/Floor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Floor_Capacity__c</fullName>
    <label>Floor Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>