force-app/main/default/objects/Opportunity__c/fields/Flooring_Type__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Type__c</fullName>
    <label>Flooring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitrified Tiles</fullName>
            </value>
            <value>
                <fullName>Ceramic Tiles</fullName>
            </value>
            <value>
                <fullName>Granite</fullName>
            </value>
            <value>
                <fullName>Marble</fullName>
            </value>
            <value>
                <fullName>Wooden Flooring</fullName>
            </value>
            <value>
                <fullName>Laminated Flooring</fullName>
            </value>
            <value>
                <fullName>Vinyl Flooring</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>