force-app/main/default/objects/Opportunity__c/fields/Google_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Google_Coordinates__c</fullName>
    <label>Google Coordinates</label>
    <type>Url</type>
</CustomField>