force-app/main/default/objects/Opportunity__c/fields/Govt_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Govt_Approval_Status__c</fullName>
    <label>Govt Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>