force-app/main/default/objects/Opportunity__c/fields/Height_from_Ground_Level__c.field-meta.xml
<CustomField>
    <fullName>Height_from_Ground_Level__c</fullName>
    <label>Height from Ground Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>