force-app/main/default/objects/Opportunity__c/fields/HGL_UoM__c.field-meta.xml
<CustomField>
    <fullName>HGL_UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>