force-app/main/default/objects/Opportunity__c/fields/Land_Area_UoM__c.field-meta.xml
<CustomField>
    <fullName>Land_Area_UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acres</fullName>
            </value>
            <value>
                <fullName>cents</fullName>
            </value>
            <value>
                <fullName>Sq ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>