force-app/main/default/objects/Opportunity__c/fields/Landlord_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landlord Mobile</label>
    <type>Checkbox</type>
</CustomField>