force-app/main/default/objects/Opportunity__c/fields/Landlord_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landlord Name</label>
    <type>Checkbox</type>
</CustomField>