force-app/main/default/objects/Opportunity__c/fields/Maintenance_History__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_History__c</fullName>
    <label>Maintenance History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>