force-app/main/default/objects/Opportunity__c/fields/Mezzanine_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Mezzanine_Requirement__c</fullName>
    <label>Mezzanine Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>