force-app/main/default/objects/Opportunity__c/fields/No_of_Docks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Docks__c</fullName>
    <label>No. of Docks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>