force-app/main/default/objects/Opportunity__c/fields/No_of_Toilets__c.field-meta.xml
<CustomField>
    <fullName>No_of_Toilets__c</fullName>
    <label>No. of Toilets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>