force-app/main/default/objects/Opportunity__c/fields/Office_Space__c.field-meta.xml
<CustomField>
    <fullName>Office_Space__c</fullName>
    <label>Office Space</label>
    <length>100</length>
    <type>Text</type>
</CustomField>