force-app/main/default/objects/Opportunity__c/fields/Parking_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Parking_Requirement__c</fullName>
    <label>Parking Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>