force-app/main/default/objects/Opportunity__c/fields/Pollution_Category__c.field-meta.xml
<CustomField>
    <fullName>Pollution_Category__c</fullName>
    <label>Pollution Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>