force-app/main/default/objects/Opportunity__c/fields/Previous_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contractor__c</fullName>
    <label>Previous Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>