force-app/main/default/objects/Opportunity__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <type>TextArea</type>
</CustomField>