force-app/main/default/objects/Opportunity__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Industry Park</fullName>
            </value>
            <value>
                <fullName>SIPCOT</fullName>
            </value>
            <value>
                <fullName>SIDCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>