force-app/main/default/objects/Opportunity__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Service Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>