force-app/main/default/objects/Opportunity__c/fields/RCC_Wall_Height__c.field-meta.xml
<CustomField>
    <fullName>RCC_Wall_Height__c</fullName>
    <label>RCC Wall Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>