force-app/main/default/objects/Opportunity__c/fields/Rental_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_from_Date__c</fullName>
    <label>Rental from Date</label>
    <type>Date</type>
</CustomField>