force-app/main/default/objects/Opportunity__c/fields/Rental_till_date__c.field-meta.xml
<CustomField>
    <fullName>Rental_till_date__c</fullName>
    <label>Rental till date</label>
    <type>Date</type>
</CustomField>