force-app/main/default/objects/Opportunity__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <type>TextArea</type>
</CustomField>