force-app/main/default/objects/Opportunity__c/fields/Security_Cabin__c.field-meta.xml
<CustomField>
    <fullName>Security_Cabin__c</fullName>
    <label>Security Cabin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>