force-app/main/default/objects/Opportunity__c/fields/Setback_Front__c.field-meta.xml
<CustomField>
    <fullName>Setback_Front__c</fullName>
    <label>Setback Front</label>
    <length>255</length>
    <type>Text</type>
</CustomField>