force-app/main/default/objects/Opportunity__c/fields/Setback_Rear__c.field-meta.xml
<CustomField>
    <fullName>Setback_Rear__c</fullName>
    <label>Setback Rear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>