force-app/main/default/objects/Opportunity__c/fields/Setback_Side__c.field-meta.xml
<CustomField>
    <fullName>Setback_Side__c</fullName>
    <label>Setback Side</label>
    <length>255</length>
    <type>Text</type>
</CustomField>