force-app/main/default/objects/Opportunity__c/fields/Size_in_sqfts__c.field-meta.xml
<CustomField>
    <fullName>Size_in_sqfts__c</fullName>
    <label>Size (in sqfts.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>